# agentfront

./: .flake8  .gitignore  .markdownlint-cli2.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  culture.yaml  pyproject.toml  sonar-project.properties
.devague/: current  current_plan
.devague/frames/: agentfront-closes-the-two-consumer-api-gaps-collea.json  agentfront-issue-31-is-resolved-the-teken-mcp-pari.json  agentfront-issue-31-is-resolved-the-teken-wrapper.json  agentfront-sharpens-into-a-testable-collaborative.json  agentfront-ships-a-public-consumer-cli-api-a-host.json  agentfront-ships-as-an-importable-runtime-add-it-a.json  agentfront-ships-taui-as-its-fourth-generated-surf.json
.devague/plans/: agentfront-issue-31-is-resolved-the-teken-mcp-pari.json  agentfront-issue-31-is-resolved-the-teken-wrapper.json  agentfront-sharpens-into-a-testable-collaborative.json  agentfront-ships-a-public-consumer-cli-api-a-host.json  agentfront-ships-as-an-importable-runtime-add-it-a.json  agentfront-ships-taui-as-its-fourth-generated-surf.json
.eidetic/memory/: agentfront__public.jsonl
.github/workflows/: docs.yml  publish.yml  security-checks.yml  tests.yml
afi/: __main__.py
afi/cli/: __init__.py
afi/doctor/: __init__.py  _self_checks.py  fixes.py
afi/explain/: catalog.py
afi/overview/: cli_surface.py
afi/rubric/: __init__.py  _types.py
agentfront/: __init__.py  __main__.py  _brand.py  _cli_core.py  _dogfood.py  _registry.py  _run_dispatch.py  app.py  cli_surface.py  doctor_live.py  errors.py  http_surface.py  mcp_surface.py  serve.py
agentfront/cite/: __init__.py  _engine.py
agentfront/cli/: __init__.py  _errors.py  _output.py
agentfront/doctor/: __init__.py  _self_checks.py  fixes.py
agentfront/explain/: __init__.py  catalog.py
agentfront/overview/: __init__.py  cli_surface.py
agentfront/rubric/: __init__.py  _runner.py  _types.py
agentfront/taui/: __init__.py  colors.py  derive.py  diagnose.py  driver.py  events.py  mirror.py  reducer.py  selectors.py  session.py  snapshot.py  state.py
agentfront/testing/: __init__.py  agreement.py  cli.py  mcp.py  taui.py
docs/: _config.yml  agent-first.md  agentculture.md  consumer-cli.md  how-it-works.md  index.md  rubric.md  skill-sources.md  testing.md
docs/plans/: 2026-06-22-agentfront-ships-as-an-importable-runtime-add-it-a.md  2026-06-23-agentfront-issue-31-is-resolved-the-teken-mcp-pari.md  2026-06-23-agentfront-issue-31-is-resolved-the-teken-wrapper.md  2026-06-26-agentfront-ships-a-public-consumer-cli-api-a-host.md  2026-06-27-agentfront-ships-taui-as-its-fourth-generated-surf.md  2026-07-02-agentfront-sharpens-into-a-testable-collaborative.md
docs/specs/: 2026-06-22-agentfront-ships-as-an-importable-runtime-add-it-a.md  2026-06-23-agentfront-issue-31-is-resolved-the-teken-mcp-pari.md  2026-06-23-agentfront-issue-31-is-resolved-the-teken-wrapper.md  2026-06-26-agentfront-closes-the-two-consumer-api-gaps-collea.md  2026-06-26-agentfront-ships-a-public-consumer-cli-api-a-host.md  2026-06-27-agentfront-ships-taui-as-its-fourth-generated-surf.md  2026-07-02-agentfront-sharpens-into-a-testable-collaborative.md
examples/quickstart/: README.md
packaging/teken/: LICENSE  README.md  pyproject.toml
tests/: test_cli.py  test_self_doctor.py
tests/integration/: test_anti_drift.py  test_cite_no_collateral.py  test_cli_commands.py  test_cli_doctor.py  test_collab_e2e.py  test_cross_surface_invariant.py  test_dogfood.py  test_e2e_consumer_cli.py  test_execution_parity.py  test_front_agreement.py  test_producer_consumer.py  test_quickstart_example.py  test_story_drift.py  test_taui_colleague_parity.py  test_taui_e2e.py  test_taui_no_dep.py  test_taui_surface_agreement.py
tests/unit/: _fake_runner.py  test_app.py  test_app_commands.py  test_cite_engine.py  test_cli_builder.py  test_cli_core.py  test_cli_explain_overview.py  test_cli_overview_cmd.py  test_cli_surface.py  test_consumer_cli_stdlib.py  test_doctor_cmd_inprocess.py  test_doctor_live.py  test_doctor_self.py  test_doctor_target_resolution.py  test_errors.py  test_errors_public.py  test_explain.py  test_host_launcher_verb.py  test_http_front.py  test_http_surface.py  test_learn.py  test_main_error_handling.py  test_mcp_surface.py  test_output.py  test_overview_cli_surface.py  (+45 more)
(+51 files in other folders)
