# Compatibility wrapper distribution.
#
# `teken` was renamed to `agentfront`. This metadata-only distribution ships NO
# importable modules — it exists so that `uv tool install teken` keeps working
# by pulling in `agentfront` (which provides both the `agentfront` command and
# the deprecated `teken` alias). The wrapper is kept at full feature parity with
# `agentfront`: it mirrors the `mcp` extra, so `uv tool install "teken[mcp]"`
# pulls `agentfront[mcp]`. The version and BOTH pins (`agentfront==` and
# `agentfront[mcp]==`) are kept in lockstep with the root project by the
# version-bump skill and a CI guard.
[project]
name = "teken"
version = "0.17.0"
description = "Deprecated alias for agentfront — installs agentfront (the renamed Agent First Interface CLI)."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{name = "AgentCulture"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
dependencies = ["agentfront==0.17.0"]

[project.optional-dependencies]
# Parity with agentfront's `mcp` extra: `uv tool install "teken[mcp]"` pulls
# `agentfront[mcp]`, so the wrapper exposes the MCP server surface too. This pin
# is kept in lockstep with the root version by the version-bump skill and the CI
# guard, exactly like the base `agentfront==` pin above.
mcp = ["agentfront[mcp]==0.17.0"]

[project.urls]
Homepage = "https://github.com/agentculture/agentfront"
Issues = "https://github.com/agentculture/agentfront/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Ship a wheel with no Python modules — only metadata + the agentfront dependency.
[tool.hatch.build.targets.wheel]
bypass-selection = true

[tool.hatch.build.targets.sdist]
include = ["pyproject.toml", "README.md"]
